--- a/index.html
+++ b/index.html
@@ -68,9 +68,8 @@
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
                     <br>
-                    <p>I'm a Mosotho aged 22, with a strong interest in web development, technology, and programming. 
-                    <br>My hobbies include watching sports, drawing, gaming. 
-                    <br>Quidem, nemo.
+                    <p> My name is Tumisang Qhobela, and I am a dedicated web developer with a strong interest in creating clean, responsive, and user-friendly websites. 
+                    <br>Outside of web development, I like to spend my time gaming, watching sports, and learning about other stuff that isn't just related to web development. 
                     </p>
                     <br>
                     <div class="tab-titles">
@@ -185,3 +184,4 @@
         
     
 </body>
+
