--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h1 class="title">Tumisang Jason Qhobela</h1>
         <p class="section__text__p2">Web Developer</p>
         <div class="btn-container">
-            <button class="btn btn-color-2" onclick="window.open(/Assets/Tumisang Qhobela CV')">
+            <button class="btn btn-color-2" onclick="window.open('CV.pdf')">
                 Download CV
             </button>
              <button class="btn btn-color-1" onclick="location.href='./#contact'">
@@ -184,5 +184,6 @@
         
     
 </body>
+
 
 
